--- a/KinectMCU/KinectMCU.vcxproj
+++ b/KinectMCU/KinectMCU.vcxproj
@@ -20,9 +20,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="UART.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
+    <ClInclude Include="UART.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{fb8a99bb-0d2d-4326-ba6a-e76387e0d14d}</ProjectGuid>
