Get UART class working

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Kinect/KinectMCU/x64/Debug/KinectMCU.tlog/CL.read.1.tlog
 Kinect/KinectMCU/x64/Debug/KinectMCU.tlog/KinectMCU.lastbuildstate
 Kinect/KinectMCU/x64/Debug/KinectMCU.tlog/link.command.1.tlog
 Kinect/KinectMCU/x64/Debug/KinectMCU.tlog/link.read.1.tlog
+Kinect/KinectMCU.VC.VC.opendb
