--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ Kinect/KinectMCU/x64/Debug/KinectMCU.tlog/KinectMCU.lastbuildstate
 Kinect/KinectMCU/x64/Debug/KinectMCU.tlog/link.command.1.tlog
 Kinect/KinectMCU/x64/Debug/KinectMCU.tlog/link.read.1.tlog
 Kinect/KinectMCU.VC.VC.opendb
+Kinect/KinectMCU.sln
+Kinect/KinectMCU.VC.db
+Kinect/x64
+Kinect/.vs
+Kinect/KinectMCU/x64
+Kinect/KinectMCU/KinectMCU.vcxproj
+Kinect/KinectMCU/KinectMCU.vcxproj.filters
+Kinect/KinectMCU/KienctMCU.vcxproj.user
